--- a/TicTacToeProject/wwwroot/css/site.css
+++ b/TicTacToeProject/wwwroot/css/site.css
@@ -14,8 +14,19 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
+.error {
+    margin-top: 0.8rem;
+    margin-bottom: -1rem;
+    color: rgba(255, 0, 0, 0.5);
+}
+
 .content {
     padding-top: 1.1rem;
+}
+
+.shape {
+    margin-bottom: 2rem;
+    margin-right: 2rem;
 }
 
 .valid.modified:not([type=checkbox]) {
