--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -19,12 +19,13 @@ else
 {
 
     <div style="position: fixed;">
-        @if(!winMessage.Equals(String.Empty))
+        @if (!winMessage.Equals(String.Empty))
         {
             <p class="winMessage">@winMessage</p>
         }
-        <p>Pick your poison (Or preferably a position between 1 and 9)</p>
+        <p>Pick your poison (Or preferably a position between 0 and 8)</p>
         <input @bind="PositionToPlaceShape">
+        <br>
         <br>
         @for (int y = 0; y < 3; y++)
         {
@@ -48,7 +49,10 @@ else
             <br>
         }
 
-        <button @onclick="TicTacToeRunTime">Confirm</button>
+        @if (IsPositionAvailablePlayer())
+        {
+            <button @onclick="TicTacToeRunTime">Confirm</button>
+        }
         <br>
         <br>
 
@@ -57,8 +61,9 @@ else
 
 @code {
     private string winMessage = String.Empty;
-    private TicTacToe ticTacToe;
+
     private Shape playerChosenShape = Shape.None;
+
     private Shape aiChosenShape;
 
     private List<int> saveUserPlacements = new List<int>();
@@ -112,6 +117,21 @@ else
         return availableMoves;
     }
 
+
+        public bool WhoStarts()
+        {
+            Random rand = new Random();
+            double decider = rand.NextDouble();
+            if (decider > 0.5)
+            {
+                return true;
+            }
+            else
+            {
+                return false;
+            }
+        }
+
     public Shape AiChosenShape
     {
         get => this.aiChosenShape;
@@ -150,37 +170,41 @@ else
     {
         if (this.AvailablePos().Contains(this.PositionToPlaceShape))
         {
-            this.saveUserPlacements.Add(this.PositionToPlaceShape);
-            this.PlaceShapeOnGivenPos(this.playerChosenShape);
             return true;
         }
         return false;
     }
 
-    public bool IsPositionAvailableAi()
-    {
-        if (this.AvailablePos().Contains(this.PositionToPlaceShape))
+        private string WhichRowToPlaceShape(int chosenPos)
         {
-            this.saveAiPlacements.Add(this.PositionToPlaceShape);
-            this.PlaceShapeOnGivenPos(this.playerChosenShape);
-            return true;
+            if (chosenPos < 3)
+            {
+                return "first";
+            }
+            else if (chosenPos > 2 && chosenPos < 6)
+            {
+                return "second";
+            }
+            else if (chosenPos <= 8 && chosenPos > 5)
+            {
+                return "third";
+            }
+            return String.Empty;
         }
-        return false;
-    }
 
     public void PlaceShapeOnGivenPos(Shape shapeToPlace)
     {
 
-        if (TicTacToe.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("first"))
+        if (this.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("first"))
         {
             this.GameMatrix[0, this.PositionToPlaceShape] = shapeToPlace;
         }
-        else if (TicTacToe.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("second"))
+        else if (this.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("second"))
         {
             int validSecondRowPos = this.PositionToPlaceShape - 3;
             this.GameMatrix[1, validSecondRowPos] = shapeToPlace;
         }
-        else if (TicTacToe.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("third"))
+        else if (this.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("third"))
         {
             int validThirdRowPos = this.PositionToPlaceShape - 6;
             this.GameMatrix[2, validThirdRowPos] = shapeToPlace;
@@ -215,24 +239,28 @@ else
             randMove = rand.Next(0, 8);
         }
         saveAiPlacements.Add(randMove);
-
+        this.PositionToPlaceShape = randMove;
+        this.PlaceShapeOnGivenPos(this.AiChosenShape);
 
         //this.PlaceShapeAccordingToRow(this.AiChosenShape, randMove);
     }
 
     public void TicTacToeRunTime()
     {
-        if (FindOutWhoWon().Equals("noone") || this.AvailablePos().Count.Equals(0))
+        if (this.AvailablePos().Count.Equals(0))
+        {
+            winMessage = "Game ended in a tie 👔";
+        }
+        else if (FindOutWhoWon().Equals("noone"))
         {
             if (!this.AvailablePos().Count.Equals(0))
             {
+                this.PlayerTurn();
+                this.CheckForEndOfGame();
+                this.AiTurn();
+                this.CheckForEndOfGame();
 
-                    this.PlayerTurn();
-                    this.CheckForEndOfGame();
-                    this.AiTurn();
-                    this.CheckForEndOfGame();
-                
-            
+
             }
         }
     }
@@ -245,12 +273,15 @@ else
         {
             this.AiDoRandomMove();
         }
-        //this.IsPositionAvailableAi();
     }
 
     private void PlayerTurn()
     {
-        this.IsPositionAvailablePlayer();
+        if (this.IsPositionAvailablePlayer())
+        {
+            this.saveUserPlacements.Add(this.PositionToPlaceShape);
+            this.PlaceShapeOnGivenPos(this.playerChosenShape);
+        }
     }
 
 
@@ -291,11 +322,11 @@ else
     {
         if (FindOutWhoWon().Equals("player"))
         {
-            Console.WriteLine("You won!");
+            winMessage = "You won!";
         }
         else if (FindOutWhoWon().Equals("ai"))
         {
-            Console.WriteLine("The AI Won");
+            winMessage = "The AI won!";
         }
     }
 
