more clarity + tie not working

--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -23,7 +23,10 @@ else
         {
             <p class="winMessage">@winMessage</p>
         }
-        <p>Pick your poison (Or preferably a position between 0 and 8)</p>
+        <p>Pick your poison (Or preferably a position between 0 and 8) <br> 
+        <span class="note">
+            Also note: you need to press enter or click somewhere on the screen for the confirm button to appear <br>
+        Double note: button will only appear if you enter a correct position</span></p>
         <input @bind="PositionToPlaceShape">
         <br>
         <br>
