--- a/TicTacToeProject/wwwroot/css/site.css
+++ b/TicTacToeProject/wwwroot/css/site.css
@@ -14,10 +14,25 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
+input {
+    height: 40px;
+    margin-top: 8px;
+    border: outset 5px purple;
+    outline: none;
+    background-color: rgba(116, 71, 155, 0.8);
+    color: rgb(0, 38, 255);
+    text-align: center;
+}
+
 .error {
     margin-top: 0.8rem;
     margin-bottom: -1rem;
     color: rgba(255, 0, 0, 0.5);
+}
+
+.winMessage {
+    font-size: 1.6rem;
+    color: rgb(33, 211, 33)
 }
 
 .note {
