--- a/TicTacToeProject/Pages/Index.razor
+++ b/TicTacToeProject/Pages/Index.razor
@@ -1,7 +1,4 @@
 @page "/"
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>Hello, planet!</h1>
+<SurveyPrompt Title="How is Blazor not working for you?" />
