--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -1,7 +1,12 @@
 @page "/tictactoe"
+using TicTacToeGame
 
+@code {
+    TicTacToeGame tictactoe = new TicTacToeGame();
+    //IMPORTANT: @CODE only runs on init or by calling a function inside it 
+}
 
-@if (this.PlayerChosenShape.Equals(Shape.None))
+@if (tictactoe.PlayerChosenShape.Equals(Shape.None))
 {
     <h1>Ready to tic tac toe?</h1>
 
@@ -9,19 +14,19 @@
     <div>
         <img width="64" src="https://upload.wikimedia.org/wikipedia/commons/f/f8/X_G.png"
         alt="Letter X representing cross shape">
-        <button class="btn-primary" @onclick="ChooseCross">Choose Cross</button>
+        <button class="btn-primary" @onclick="tictactoe.ChooseCross">Choose Cross</button>
     </div>
     <div>
         <img width="64" src="https://www.vhv.rs/file/max/20/201990_red-circle-png.png" alt="circle shape">
-        <button class="btn-primary" @onclick="ChooseCircle">Choose Circle</button>
+        <button class="btn-primary" @onclick="tictactoe.ChooseCircle">Choose Circle</button>
     </div>
 }
 else
 {
     <div style="position: fixed;">
-        @if (!winMessage.Equals(String.Empty))
+        @if (!tictactoe.WinMessage.Equals(String.Empty))
         {
-            <p class="winMessage">@winMessage</p>
+            <p class="winMessage">@tictactoe.WinMessage</p>
         }
         <p>Click on one of the squares and then click on the confirm button</p> <br>
 
@@ -30,7 +35,7 @@ else
 
             for (int x = 0; x < 3; x++)
             {
-                switch (gameMatrix[y, x])
+                switch (tictactoe.GameMatrix[y, x])
                 {
                     case Shape.Cross:
                         <button class="equalButton" disabled><img class="shape" width="64"
@@ -46,7 +51,7 @@ else
                         @*Vars above are needed since the lambda function below only uses the last index of x and y instead of the current
                             one (3, 3) instead of (0, 0), (0, 1), (0, 2)...*@
                         int currentPos = j * 3 + i;
-                        <button class="equalButton" @onclick="@(() => SetGivenPos(@currentPos))"><img class="shape" width="64"
+                        <button class="equalButton" @onclick="@(() => tictactoe.SetGivenPos(@currentPos))"><img class="shape" width="64"
             src="https://pixy.org/src/474/thumbs350/4742987.jpg"></button>
                         break;
                 }
@@ -55,353 +60,11 @@ else
             <br>
         }
 
-        @if (IsPositionAvailablePlayer())
+        @if (tictactoe.IsPositionAvailablePlayer())
         {
-            <button class="btn-primary" @onclick="TicTacToeRunTime">Confirm</button>
+            <button class="btn-primary" @onclick="tictactoe.TicTacToeRunTime">Confirm</button>
         } 
 
         <a href="../"><button class="btn btn-danger">Go Back</button></a>
     </div>
-}
-
-@code {
-    private string winMessage = String.Empty;
-
-    private Shape playerChosenShape = Shape.None;
-
-    private Shape aiChosenShape;
-
-    private List<int> saveUserPlacements = new List<int>();
-
-    private List<int> saveAiPlacements = new List<int>();
-
-    public Shape[,] GameMatrix
-    {
-        get => this.gameMatrix;
-
-        set
-        {
-            this.gameMatrix = value;
-        }
-    }
-
-    private Shape[,] gameMatrix = new Shape[3, 3]
-    {
-{Shape.None, Shape.None, Shape.None},
-{Shape.None, Shape.None, Shape.None},
-{Shape.None, Shape.None, Shape.None}
-    };
-
-    private int positionToPlaceShape = 9;
-
-    public int PositionToPlaceShape
-    {
-        get => this.positionToPlaceShape;
-
-        set
-        {
-            if (!value.Equals(null))
-            {
-                this.positionToPlaceShape = value;
-            }
-        }
-    }
-
-    public List<int> AvailablePos()
-    {
-        int i = 0;
-        List<int> availableMoves = new List<int>();
-        foreach (Shape shape in gameMatrix)
-        {
-            if (shape.Equals(Shape.None))
-            {
-                availableMoves.Add(i);
-            }
-            i++;
-        }
-        return availableMoves;
-    }
-
-
-    public void SetGivenPos(int givenPos) {
-        this.PositionToPlaceShape = givenPos; 
-    }
-
-    public bool WhoStarts()
-    {
-        Random rand = new Random();
-        double decider = rand.NextDouble();
-        if (decider > 0.5)
-        {
-            return true;
-        }
-        else
-        {
-            return false;
-        }
-    }
-
-    public Shape AiChosenShape
-    {
-        get => this.aiChosenShape;
-
-        set
-        {
-            this.aiChosenShape = value;
-        }
-    }
-
-    public Shape PlayerChosenShape
-    {
-        get => this.playerChosenShape;
-        set
-        {
-            this.playerChosenShape = value;
-        }
-    }
-
-    public void ChooseCross()
-    {
-
-        this.PlayerChosenShape = Shape.Cross;
-        this.AiChosenShape = Shape.Circle;
-    }
-
-    public void ChooseCircle()
-    {
-        this.PlayerChosenShape = Shape.Circle;
-        this.AiChosenShape = Shape.Cross;
-    }
-
-
-    public bool IsPositionAvailablePlayer()
-    {
-        if (this.AvailablePos().Contains(this.PositionToPlaceShape))
-        {
-            return true;
-        }
-        return false;
-    }
-
-    private string WhichRowToPlaceShape(int chosenPos)
-    {
-        if (chosenPos < 3)
-        {
-            return "first";
-        }
-        else if (chosenPos > 2 && chosenPos < 6)
-        {
-            return "second";
-        }
-        else if (chosenPos <= 8 && chosenPos > 5)
-        {
-            return "third";
-        }
-        return String.Empty;
-    }
-
-    public void PlaceShapeOnGivenPos(Shape shapeToPlace)
-    {
-
-        if (this.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("first"))
-        {
-            this.GameMatrix[0, this.PositionToPlaceShape] = shapeToPlace;
-        }
-        else if (this.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("second"))
-        {
-            int validSecondRowPos = this.PositionToPlaceShape - 3;
-            this.GameMatrix[1, validSecondRowPos] = shapeToPlace;
-        }
-        else if (this.WhichRowToPlaceShape(this.PositionToPlaceShape).Equals("third"))
-        {
-            int validThirdRowPos = this.PositionToPlaceShape - 6;
-            this.GameMatrix[2, validThirdRowPos] = shapeToPlace;
-        }
-
-    }
-
-    private bool AiPlaceIfWinPosIsFree()
-    {
-        TicTacToeAiLogic ticTacToeAiLogic = new TicTacToeAiLogic(this.saveAiPlacements, this.saveUserPlacements);
-        List<int> missingPositionsForWinOrBlockPlayer = ticTacToeAiLogic.AiPlacingProcess();
-        foreach (int missingPosForWinOrBlockPlayer in missingPositionsForWinOrBlockPlayer)
-        {
-            if (this.AvailablePos().Contains(missingPosForWinOrBlockPlayer))
-            {
-                this.PositionToPlaceShape = missingPosForWinOrBlockPlayer;
-                saveAiPlacements.Add(missingPosForWinOrBlockPlayer);
-                this.PlaceShapeOnGivenPos(this.AiChosenShape);
-                return true;
-            }
-        }
-        return false;
-    }
-
-
-    private void AiDoRandomMove()
-    {
-        Random rand = new Random();
-        int randMove = rand.Next(0, 8);
-        while (!this.AvailablePos().Contains(randMove))
-        {
-            randMove = rand.Next(0, 8);
-        }
-        saveAiPlacements.Add(randMove);
-        this.PositionToPlaceShape = randMove;
-        this.PlaceShapeOnGivenPos(this.AiChosenShape);
-
-        //this.PlaceShapeAccordingToRow(this.AiChosenShape, randMove);
-    }
-
-    public void TicTacToeRunTime()
-    {
-        if (this.AvailablePos().Count.Equals(0))
-        {
-            winMessage = "Game ended in a tie 👔";
-        }
-        else if (FindOutWhoWon().Equals("noone"))
-        {
-            if (!this.AvailablePos().Count.Equals(0))
-            {
-                    this.PlayerTurn();
-                    this.CheckForEndOfGame();
-                    if (FindOutWhoWon().Equals("noone"))
-                    {
-                        this.AiTurn();
-                        this.CheckForEndOfGame();
-                    }
-            }
-
-        }
-    }
-
-
-
-    private void AiTurn()
-    {
-        if (!this.AvailablePos().Count.Equals(0))
-        {
-            if (!this.AiPlaceIfWinPosIsFree())
-            {
-                this.AiDoRandomMove();
-            }
-        }
-        else
-        {
-            winMessage = "Game ended in a tie 👔";
-        }
-    }
-
-    private void PlayerTurn()
-    {
-        if (!this.AvailablePos().Count.Equals(0))
-        {
-            if (this.IsPositionAvailablePlayer())
-            {
-                this.saveUserPlacements.Add(this.PositionToPlaceShape);
-                this.PlaceShapeOnGivenPos(this.playerChosenShape);
-            }
-        }
-        else
-        {
-            winMessage = "Game ended in a tie 👔";
-        }
-    }
-
-
-
-
-    public string FindOutWhoWon()
-    {
-        string playerWinningDiagonaly = this.CheckForDiagonalGameEnding(saveUserPlacements, "player");
-        string playerWinningHorizontaly = this.CheckForHorizontalGameEnding(saveUserPlacements, "player");
-        string playerWinningVertically = this.CheckForVerticalGameEnding(saveUserPlacements, "player");
-
-        string aiWinningDiagonaly = this.CheckForDiagonalGameEnding(saveAiPlacements, "ai");
-        string aiWinningHorizontaly = this.CheckForHorizontalGameEnding(saveAiPlacements, "ai");
-        string aiWinningVertically = this.CheckForVerticalGameEnding(saveAiPlacements, "ai");
-
-        if (playerWinningDiagonaly.Equals("player") || playerWinningHorizontaly.Equals("player") ||
-        playerWinningVertically.Equals("player"))
-        {
-            return "player";
-        }
-        else if (aiWinningDiagonaly.Equals("ai") || aiWinningHorizontaly.Equals("ai") || aiWinningVertically.Equals("ai"))
-        {
-            return "ai";
-        }
-        else
-        {
-            return "noone";
-        }
-    }
-
-    public void CheckForEndOfGame()
-    {
-        if (FindOutWhoWon().Equals("player"))
-        {
-            winMessage = "You won!";
-        }
-        else if (FindOutWhoWon().Equals("ai"))
-        {
-            winMessage = "The AI won!";
-        }
-    }
-
-    private string CheckForVerticalGameEnding(List<int> placements, string whoMadePlacements)
-    {
-        if (placements.Contains(2) && placements.Contains(5) && placements.Contains(8))
-        {
-            return whoMadePlacements;
-        }
-        else if (placements.Contains(1) && placements.Contains(4) && placements.Contains(7))
-        {
-            return whoMadePlacements;
-        }
-        else if (placements.Contains(0) && placements.Contains(3) && placements.Contains(6))
-        {
-            return whoMadePlacements;
-        }
-        else
-        {
-            return "noone";
-        }
-    }
-
-    private string CheckForHorizontalGameEnding(List<int> placements, string whoMadePlacements)
-    {
-        if (placements.Contains(0) && placements.Contains(1) && placements.Contains(2))
-        {
-            return whoMadePlacements;
-        }
-        else if (placements.Contains(3) && placements.Contains(4) && placements.Contains(5))
-        {
-            return whoMadePlacements;
-        }
-        else if (placements.Contains(6) && placements.Contains(7) && placements.Contains(8))
-        {
-            return whoMadePlacements;
-        }
-        else
-        {
-            return "noone";
-        }
-    }
-
-    private string CheckForDiagonalGameEnding(List<int> placements, string whoMadePlacements)
-    {
-        if (placements.Contains(0) && placements.Contains(4) && placements.Contains(8))
-        {
-            return whoMadePlacements;
-        }
-        else if (placements.Contains(6) && placements.Contains(4) && placements.Contains(2))
-        {
-            return whoMadePlacements;
-        }
-        else
-        {
-            return "noone";
-        }
-    }
-
 }
