--- a/TicTacToeProject/wwwroot/css/site.css
+++ b/TicTacToeProject/wwwroot/css/site.css
@@ -35,6 +35,10 @@ input {
     color: rgb(33, 211, 33)
 }
 
+.equalButton {
+    padding: 10px;
+}
+
 .note {
     font-size: 0.9rem;
     color:rgba(184, 184, 184, 0.9)
@@ -45,8 +49,13 @@ input {
 }
 
 .shape {
-    margin-bottom: 2rem;
-    margin-right: 2rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
+button:focus {
+    background-color: black ;
 }
 
 .valid.modified:not([type=checkbox]) {
