--- a/TicTacToeProject/Pages/Tictactoe.razor
+++ b/TicTacToeProject/Pages/Tictactoe.razor
@@ -19,16 +19,6 @@
         <img width="64" src="https://www.vhv.rs/file/max/20/201990_red-circle-png.png" alt="circle shape">
         <button class="btn-primary" @onclick="ChooseCircle">Choose Circle</button>
     </div>
-
-    bool playerStarts = tictactoe.WhoStarts();
-    tictactoe.PlayerStarts = playerStarts;
-    if(playerStarts)
-    {
-        <p>You will start first</p>
-    } else
-    {
-        <p>The AI will start first</p>
-    }
 }
 else
 {
@@ -37,48 +27,51 @@ else
         {
             <p class="winMessage">@WinMessage</p>
         }
-        <p>Click on one of the squares and then click on the confirm button</p> <br>
 
-        @for (int y = 0; y < 3; y++)
-        {
 
-            for (int x = 0; x < 3; x++)
+
+        @if (!gameHasStarted){
+            <button class="btn btn-primary" @onclick="StartGame">Start Game</button>
+        } else {
+            @for (int y = 0; y < 3; y++)
             {
-                switch (GameMatrix[y, x])
+
+                for (int x = 0; x < 3; x++)
                 {
-                    case Shape.Cross:
-                        <button class="equalButton" disabled><img class="shape" width="64"
-            src="https://upload.wikimedia.org/wikipedia/commons/f/f8/X_G.png"></button>
-                        break;
-                    case Shape.Circle:
-                        <button class="equalButton" disabled><img class="shape" width="64"
-            src="https://www.vhv.rs/file/max/20/201990_red-circle-png.png"></button>
-                        break;
-                    case Shape.None:
-                        var i = x;
-                        var j = y;
-                        @*Vars above are needed since the lambda function below only uses the last index of x and y instead of the current
-                            one (3, 3) instead of (0, 0), (0, 1), (0, 2)...*@
-                        int currentPos = j * 3 + i;
-                        <button class="equalButton" @onclick="@(() => SetGivenPos(@currentPos))"><img class="shape" width="64"
-            src="https://pixy.org/src/474/thumbs350/4742987.jpg"></button>
-                        break;
+                    switch (GameMatrix[y, x])
+                    {
+                        case Shape.Cross:
+                            <button class="equalButton" disabled><img class="shape" width="64"
+                src="https://upload.wikimedia.org/wikipedia/commons/f/f8/X_G.png"></button>
+                            break;
+                        case Shape.Circle:
+                            <button class="equalButton" disabled><img class="shape" width="64"
+                src="https://www.vhv.rs/file/max/20/201990_red-circle-png.png"></button>
+                            break;
+                        case Shape.None:
+                            var i = x;
+                            var j = y;
+                            @*Vars above are needed since the lambda function below only uses the last index of x and y instead of the current
+                                one (3, 3) instead of (0, 0), (0, 1), (0, 2)...*@
+                            int currentPos = j * 3 + i;
+                            <button class="equalButton" @onclick="@(() => SetGivenPos(@currentPos))"><img class="shape" width="64"
+                src="https://pixy.org/src/474/thumbs350/4742987.jpg"></button>
+                            break;
+                    }
                 }
+
+                <br>
             }
-
-            <br>
         }
-        
 
-        @if (tictactoe.IsPositionAvailablePlayer())
+        @if (tictactoe.IsPositionAvailablePlayer() && gameHasStarted)
         {
-            <button class="btn-primary" @onclick="tictactoe.TicTacToeRunTime">Confirm</button>
+            <button class="btn-primary" @onclick="NextTurn">Confirm</button>
         } 
+
         <br>
         <br>
         <a href="../"><button class="btn btn-danger">Go Back</button></a>
         <button class="btn btn-danger" @onclick="RefreshPage">Play Again</button>
     </div>
 }
-
-
